@@ -202,6 +202,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17149: Fix random.vonmisesvariate to always return results in
+  the range [0, 2*math.pi].
+
 - Issue #1470548: XMLGenerator now works with UTF-16 and UTF-32 encodings.
 
 - Issue #6975: os.path.realpath() now correctly resolves multiple nested
